--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    <include src="./partials/header.html"></include>
     <include src="./partials/gallery.html"></include>
     
   </body>
