--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <body>
     <include src="./partials/header.html"></include>
     <include src="./partials/gallery.html"></include>
+    <include src="./partials/buttonUp.html"></include>
     <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
