--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,6 @@
     <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/buttonUp.html"></include>
-    <include src="./partials/modal.html"></include>
+    <!-- <include src="./partials/modal.html"></include> -->
   </body>
 </html>
