--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-
+    <include src="./partials/spinner.html"></include>
+    <include src="./partials/modal.html"></include>
     <include src="./partials/header.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/pagination.html"></include>
@@ -24,3 +25,5 @@
     <!-- <include src="./partials/modal.html"></include> -->
   </body>
 </html>
+
+    
