--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon.png"
+      href="./images/new-favicon.png"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
@@ -23,5 +23,3 @@
     <include src="./partials/buttonUp.html"></include>
   </body>
 </html>
-
-    
