--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,6 @@
     <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/buttonUp.html"></include>
+    <include src="./partials/modal-registr.html"></include>
   </body>
 </html>
