--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmoteka</title>
 
-    <link
-      rel="icon"
-      alt="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/new-favicon.png"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/new-favicon.png">
+
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
