--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="this page is a video hosting with a lot of movies for all ages">
     <title>Filmoteka</title>
-
     <link rel="icon" type="image/png" sizes="32x32" href="./images/new-favicon.png">
-
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
