--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="this page is a video hosting with a lot of movies for all ages">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
     <title>Filmoteka</title>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/new-favicon.png">
     <link rel="stylesheet" href="./sass/index.scss" />
@@ -12,6 +16,7 @@
   <body>
     <include src="./partials/spinner.html"></include>
     <include src="./partials/header.html"></include>
+    <include src="./partials/swiper.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
